--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,17 @@
-# Logs
-logs
-*.log
+# environment files
+.env
+backend/.env
+frontend/.env
+
+# dependencies
+node_modules/
+backend/node_modules/
+frontend/node_modules/
+
+# build output
+frontend/dist/
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-.env
